Updated ProductService and tests to use the security service