@@ -1,13 +1,19 @@
-
 package org.cubord.cubordbackend.service;
 
-import org.cubord.cubordbackend.domain.*;
 import org.cubord.cubordbackend.dto.product.ProductRequest;
 import org.cubord.cubordbackend.dto.product.ProductResponse;
 import org.cubord.cubordbackend.dto.product.ProductUpdateRequest;
+import org.cubord.cubordbackend.domain.Product;
+import org.cubord.cubordbackend.domain.ProductDataSource;
+import org.cubord.cubordbackend.domain.User;
+import org.cubord.cubordbackend.domain.UserRole;
 import org.cubord.cubordbackend.exception.*;
 import org.cubord.cubordbackend.repository.ProductRepository;
-import org.junit.jupiter.api.*;
+import org.cubord.cubordbackend.security.SecurityService;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -16,60 +22,77 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 
 import java.time.LocalDateTime;
 import java.util.*;
 
 import static org.assertj.core.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
+/**
+ * Comprehensive test suite for ProductService following the modernized security architecture.
+ *
+ * <p>Test Structure:</p>
+ * <ul>
+ *   <li>No token validation tests (handled by Spring Security filters)</li>
+ *   <li>Authorization tested via SecurityService mocking</li>
+ *   <li>Focus on business logic and data validation</li>
+ *   <li>Clear separation between user and admin operations</li>
+ * </ul>
+ */
 @ExtendWith(MockitoExtension.class)
-@DisplayName("Product Service Tests")
+@DisplayName("ProductService Tests")
 class ProductServiceTest {
 
-    @Mock private ProductRepository productRepository;
-    @Mock private UpcApiService upcApiService;
-    @Mock private UserService userService;
-    @Mock private JwtAuthenticationToken validToken;
-    @Mock private JwtAuthenticationToken invalidToken;
+    @Mock
+    private ProductRepository productRepository;
+
+    @Mock
+    private UpcApiService upcApiService;
+
+    @Mock
+    private SecurityService securityService;
 
     @InjectMocks
     private ProductService productService;
 
     // Test data
+    private UUID testUserId;
+    private UUID adminUserId;
+    private UUID productId;
     private User testUser;
     private User adminUser;
     private Product testProduct;
     private ProductRequest testProductRequest;
     private ProductUpdateRequest testProductUpdateRequest;
-    private UUID productId;
-    private UUID userId;
 
     @BeforeEach
     void setUp() {
-        reset(productRepository, upcApiService, userService, validToken, invalidToken);
-
+        testUserId = UUID.randomUUID();
+        adminUserId = UUID.randomUUID();
         productId = UUID.randomUUID();
-        userId = UUID.randomUUID();
 
         testUser = User.builder()
-                .id(userId)
+                .id(testUserId)
                 .username("testuser")
                 .email("test@example.com")
                 .displayName("Test User")
                 .role(UserRole.USER)
                 .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
                 .build();
 
         adminUser = User.builder()
-                .id(UUID.randomUUID())
+                .id(adminUserId)
                 .username("adminuser")
                 .email("admin@example.com")
                 .displayName("Admin User")
                 .role(UserRole.ADMIN)
                 .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
                 .build();
 
         testProduct = Product.builder()
@@ -102,668 +125,735 @@ class ProductServiceTest {
                 .build();
     }
 
-    // Helper method to set up authentication behavior
-    private void setupValidAuthentication() {
-        when(userService.getCurrentUser(eq(validToken))).thenReturn(testUser);
+    // ==================== Test Utilities ====================
+
+    private void mockAuthenticatedUser(UUID userId) {
+        when(securityService.getCurrentUserId()).thenReturn(userId);
     }
 
-    private void setupInvalidAuthentication() {
-        when(userService.getCurrentUser(eq(invalidToken))).thenThrow(new NotFoundException("User not found"));
+    private void mockAuthenticatedAdmin() {
+        when(securityService.getCurrentUserId()).thenReturn(adminUserId);
+        when(securityService.getCurrentUser()).thenReturn(adminUser);
+        when(securityService.isAdmin()).thenReturn(true);
     }
 
-    private void setupAdminAuthentication() {
-        when(userService.getCurrentUser(eq(validToken))).thenReturn(adminUser);
+    private void mockAuthenticatedRegularUser() {
+        when(securityService.getCurrentUserId()).thenReturn(testUserId);
+        when(securityService.getCurrentUser()).thenReturn(testUser);
+        when(securityService.isAdmin()).thenReturn(false);
     }
+
+    // ==================== Query Operation Tests ====================
 
     @Nested
-    @DisplayName("Authentication Tests")
-    class AuthenticationTests {
+    @DisplayName("getProductById")
+    class GetProductByIdTests {
 
         @Test
-        @DisplayName("Should throw ValidationException when token is null for create")
-        void shouldThrowValidationExceptionWhenTokenIsNullForCreate() {
-            assertThatThrownBy(() -> productService.createProduct(testProductRequest, null))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("token cannot be null");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when token is null for getById")
-        void shouldThrowValidationExceptionWhenTokenIsNullForGetById() {
-            assertThatThrownBy(() -> productService.getProductById(productId, null))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("token cannot be null");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findById(any(UUID.class));
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when token is null for delete")
-        void shouldThrowValidationExceptionWhenTokenIsNullForDelete() {
-            assertThatThrownBy(() -> productService.deleteProduct(productId, null))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("token cannot be null");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).delete(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when request is null for create")
-        void shouldThrowValidationExceptionWhenRequestIsNull() {
-            assertThatThrownBy(() -> productService.createProduct(null, validToken))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Product request");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should throw NotFoundException when user not found")
-        void shouldThrowNotFoundExceptionWhenUserNotFound() {
-            setupInvalidAuthentication();
-
-            assertThatThrownBy(() -> productService.createProduct(testProductRequest, invalidToken))
-                    .isInstanceOf(NotFoundException.class)
-                    .hasMessage("User not found");
-
-            verify(userService).getCurrentUser(eq(invalidToken));
-            verify(productRepository, never()).save(any(Product.class));
-        }
-    }
-
-    @Nested
-    @DisplayName("Product CRUD Operations")
-    class ProductCrudOperations {
-
-        @Test
-        @DisplayName("Should create product manually when UPC doesn't exist")
-        void shouldCreateProductManuallyWhenUpcDoesntExist() {
-            // Given
-            setupValidAuthentication();
-            when(productRepository.findByUpc(eq(testProductRequest.getUpc()))).thenReturn(Optional.empty());
-            when(productRepository.save(any(Product.class))).thenReturn(testProduct);
-            when(upcApiService.fetchProductData(eq(testProductRequest.getUpc())))
-                    .thenThrow(new RuntimeException("API unavailable"));
-
-            // When
-            ProductResponse response = productService.createProduct(testProductRequest, validToken);
-
-            // Then
-            assertThat(response).isNotNull();
-            assertThat(response.getUpc()).isEqualTo(testProductRequest.getUpc());
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findByUpc(eq(testProductRequest.getUpc()));
-            verify(productRepository).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should throw ConflictException when UPC already exists")
-        void shouldThrowConflictExceptionWhenUpcExists() {
-            // Given
-            setupValidAuthentication();
-            when(productRepository.findByUpc(eq(testProductRequest.getUpc()))).thenReturn(Optional.of(testProduct));
-
-            // When & Then
-            assertThatThrownBy(() -> productService.createProduct(testProductRequest, validToken))
-                    .isInstanceOf(ConflictException.class)
-                    .hasMessageContaining("Product with UPC '" + testProductRequest.getUpc() + "' already exists");
-
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findByUpc(eq(testProductRequest.getUpc()));
-            verify(productRepository, never()).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should get product by ID successfully")
+        @DisplayName("should retrieve product successfully when authenticated")
         void shouldGetProductByIdSuccessfully() {
             // Given
-            setupValidAuthentication();
+            mockAuthenticatedUser(testUserId);
             when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
 
             // When
-            ProductResponse response = productService.getProductById(productId, validToken);
+            ProductResponse response = productService.getProductById(productId);
 
             // Then
             assertThat(response).isNotNull();
             assertThat(response.getId()).isEqualTo(productId);
-            verify(userService).getCurrentUser(eq(validToken));
+            assertThat(response.getUpc()).isEqualTo(testProduct.getUpc());
+            assertThat(response.getName()).isEqualTo(testProduct.getName());
+
+            verify(securityService).getCurrentUserId();
             verify(productRepository).findById(eq(productId));
         }
 
         @Test
-        @DisplayName("Should throw ValidationException when product ID is null")
+        @DisplayName("should throw ValidationException when product ID is null")
         void shouldThrowValidationExceptionWhenProductIdIsNull() {
-            assertThatThrownBy(() -> productService.getProductById(null, validToken))
+            // When/Then
+            assertThatThrownBy(() -> productService.getProductById(null))
                     .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Product ID");
+                    .hasMessageContaining("Product ID cannot be null");
 
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findById(any(UUID.class));
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).findById(any());
         }
 
         @Test
-        @DisplayName("Should throw NotFoundException when product doesn't exist")
+        @DisplayName("should throw NotFoundException when product doesn't exist")
         void shouldThrowNotFoundExceptionWhenProductDoesntExist() {
             // Given
-            setupValidAuthentication();
+            mockAuthenticatedUser(testUserId);
             when(productRepository.findById(eq(productId))).thenReturn(Optional.empty());
 
-            // When & Then
-            assertThatThrownBy(() -> productService.getProductById(productId, validToken))
+            // When/Then
+            assertThatThrownBy(() -> productService.getProductById(productId))
                     .isInstanceOf(NotFoundException.class)
-                    .hasMessage("Product not found");
+                    .hasMessageContaining("Product not found");
 
-            verify(userService).getCurrentUser(eq(validToken));
+            verify(securityService).getCurrentUserId();
             verify(productRepository).findById(eq(productId));
-        }
-
-        @Test
-        @DisplayName("Should get product by UPC successfully")
-        void shouldGetProductByUpcSuccessfully() {
-            // Given
-            setupValidAuthentication();
-            String upc = "123456789012";
-            when(productRepository.findByUpc(eq(upc))).thenReturn(Optional.of(testProduct));
-
-            // When
-            ProductResponse response = productService.getProductByUpc(upc, validToken);
-
-            // Then
-            assertThat(response).isNotNull();
-            assertThat(response.getUpc()).isEqualTo(upc);
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findByUpc(eq(upc));
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when UPC is null")
-        void shouldThrowValidationExceptionWhenUpcIsNull() {
-            assertThatThrownBy(() -> productService.getProductByUpc(null, validToken))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("UPC");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findByUpc(any(String.class));
-        }
-
-        @Test
-        @DisplayName("Should throw NotFoundException when product with UPC doesn't exist")
-        void shouldThrowNotFoundExceptionWhenProductWithUpcDoesntExist() {
-            // Given
-            setupValidAuthentication();
-            String upc = "999999999999";
-            when(productRepository.findByUpc(eq(upc))).thenReturn(Optional.empty());
-
-            // When & Then
-            assertThatThrownBy(() -> productService.getProductByUpc(upc, validToken))
-                    .isInstanceOf(NotFoundException.class)
-                    .hasMessage("Product not found");
-
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findByUpc(eq(upc));
-        }
-
-        @Test
-        @DisplayName("Should update product successfully with admin access")
-        void shouldUpdateProductSuccessfully() {
-            // Given
-            setupAdminAuthentication();
-            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
-            when(productRepository.save(any(Product.class))).thenReturn(testProduct);
-
-            // When
-            ProductResponse response = productService.updateProduct(productId, testProductUpdateRequest, validToken);
-
-            // Then
-            assertThat(response).isNotNull();
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findById(eq(productId));
-            verify(productRepository).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when update request is null")
-        void shouldThrowValidationExceptionWhenUpdateRequestIsNull() {
-            assertThatThrownBy(() -> productService.updateProduct(productId, null, validToken))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Update request");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should throw NotFoundException when product not found for update")
-        void shouldThrowNotFoundExceptionWhenProductNotFoundForUpdate() {
-            // Given
-            setupAdminAuthentication();
-            when(productRepository.findById(eq(productId))).thenReturn(Optional.empty());
-
-            // When & Then
-            assertThatThrownBy(() -> productService.updateProduct(productId, testProductUpdateRequest, validToken))
-                    .isInstanceOf(NotFoundException.class)
-                    .hasMessage("Product not found");
-
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findById(eq(productId));
-            verify(productRepository, never()).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should delete product successfully with admin access")
-        void shouldDeleteProductSuccessfully() {
-            // Given
-            setupAdminAuthentication();
-            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
-
-            // When
-            productService.deleteProduct(productId, validToken);
-
-            // Then
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findById(eq(productId));
-            verify(productRepository).delete(eq(testProduct));
-        }
-
-        @Test
-        @DisplayName("Should throw NotFoundException when product not found for deletion")
-        void shouldThrowNotFoundExceptionWhenProductNotFoundForDeletion() {
-            // Given
-            setupAdminAuthentication();
-            when(productRepository.findById(eq(productId))).thenReturn(Optional.empty());
-
-            // When & Then
-            assertThatThrownBy(() -> productService.deleteProduct(productId, validToken))
-                    .isInstanceOf(NotFoundException.class)
-                    .hasMessage("Product not found");
-
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findById(eq(productId));
-            verify(productRepository, never()).delete(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should throw DataIntegrityException when save operation fails")
-        void shouldThrowDataIntegrityExceptionWhenSaveOperationFails() {
-            // Given
-            setupValidAuthentication();
-            when(productRepository.findByUpc(eq(testProductRequest.getUpc()))).thenReturn(Optional.empty());
-            when(upcApiService.fetchProductData(eq(testProductRequest.getUpc())))
-                    .thenThrow(new RuntimeException("API unavailable"));
-            when(productRepository.save(any(Product.class)))
-                    .thenThrow(new RuntimeException("Database constraint violation"));
-
-            // When & Then
-            assertThatThrownBy(() -> productService.createProduct(testProductRequest, validToken))
-                    .isInstanceOf(DataIntegrityException.class)
-                    .hasMessageContaining("Failed to save product");
-
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).save(any(Product.class));
         }
     }
 
     @Nested
-    @DisplayName("Product Search and Queries")
-    class ProductSearchAndQueries {
+    @DisplayName("getProductByUpc")
+    class GetProductByUpcTests {
 
         @Test
-        @DisplayName("Should search products by name")
-        void shouldSearchProductsByName() {
+        @DisplayName("should retrieve product by UPC successfully")
+        void shouldGetProductByUpcSuccessfully() {
             // Given
-            setupValidAuthentication();
-            String searchTerm = "test";
-            when(productRepository.findByNameContainingIgnoreCase(eq(searchTerm)))
-                    .thenReturn(List.of(testProduct));
+            String upc = "123456789012";
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findByUpc(eq(upc))).thenReturn(Optional.of(testProduct));
 
             // When
-            List<ProductResponse> responses = productService.searchProductsByName(searchTerm, validToken);
+            ProductResponse response = productService.getProductByUpc(upc);
 
             // Then
-            assertThat(responses).hasSize(1);
-            assertThat(responses.getFirst().getName()).isEqualTo(testProduct.getName());
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findByNameContainingIgnoreCase(eq(searchTerm));
+            assertThat(response).isNotNull();
+            assertThat(response.getUpc()).isEqualTo(upc);
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findByUpc(eq(upc));
         }
 
         @Test
-        @DisplayName("Should throw ValidationException when search term is null")
-        void shouldThrowValidationExceptionWhenSearchTermIsNull() {
-            assertThatThrownBy(() -> productService.searchProductsByName(null, validToken))
+        @DisplayName("should throw ValidationException when UPC is null")
+        void shouldThrowValidationExceptionWhenUpcIsNull() {
+            // When/Then
+            assertThatThrownBy(() -> productService.getProductByUpc(null))
                     .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Search term");
+                    .hasMessageContaining("UPC cannot be null or empty");
 
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findByNameContainingIgnoreCase(any(String.class));
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).findByUpc(any());
         }
 
         @Test
-        @DisplayName("Should throw ValidationException when search term is empty")
-        void shouldThrowValidationExceptionWhenSearchTermIsEmpty() {
-            assertThatThrownBy(() -> productService.searchProductsByName("   ", validToken))
+        @DisplayName("should throw ValidationException when UPC is empty")
+        void shouldThrowValidationExceptionWhenUpcIsEmpty() {
+            // When/Then
+            assertThatThrownBy(() -> productService.getProductByUpc("   "))
                     .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Search term");
+                    .hasMessageContaining("UPC cannot be null or empty");
 
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findByNameContainingIgnoreCase(any(String.class));
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).findByUpc(any());
         }
 
         @Test
-        @DisplayName("Should get products by category")
-        void shouldGetProductsByCategory() {
+        @DisplayName("should throw NotFoundException when product with UPC doesn't exist")
+        void shouldThrowNotFoundExceptionWhenProductWithUpcDoesntExist() {
             // Given
-            setupValidAuthentication();
-            String category = "Test Category";
-            when(productRepository.findByCategory(eq(category))).thenReturn(List.of(testProduct));
+            String upc = "999999999999";
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findByUpc(eq(upc))).thenReturn(Optional.empty());
 
-            // When
-            List<ProductResponse> responses = productService.getProductsByCategory(category, validToken);
+            // When/Then
+            assertThatThrownBy(() -> productService.getProductByUpc(upc))
+                    .isInstanceOf(NotFoundException.class)
+                    .hasMessageContaining("Product not found");
 
-            // Then
-            assertThat(responses).hasSize(1);
-            assertThat(responses.getFirst().getCategory()).isEqualTo(category);
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findByCategory(eq(category));
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findByUpc(eq(upc));
         }
+    }
+
+    @Nested
+    @DisplayName("getAllProducts")
+    class GetAllProductsTests {
 
         @Test
-        @DisplayName("Should throw ValidationException when category is null")
-        void shouldThrowValidationExceptionWhenCategoryIsNull() {
-            assertThatThrownBy(() -> productService.getProductsByCategory(null, validToken))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Category");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findByCategory(any(String.class));
-        }
-
-        @Test
-        @DisplayName("Should get products by brand")
-        void shouldGetProductsByBrand() {
-            // Given
-            setupValidAuthentication();
-            String brand = "Test Brand";
-            when(productRepository.findByBrand(eq(brand))).thenReturn(List.of(testProduct));
-
-            // When
-            List<ProductResponse> responses = productService.getProductsByBrand(brand, validToken);
-
-            // Then
-            assertThat(responses).hasSize(1);
-            assertThat(responses.getFirst().getBrand()).isEqualTo(brand);
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).findByBrand(eq(brand));
-        }
-
-        @Test
-        @DisplayName("Should throw ValidationException when brand is null")
-        void shouldThrowValidationExceptionWhenBrandIsNull() {
-            assertThatThrownBy(() -> productService.getProductsByBrand(null, validToken))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Brand");
-
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findByBrand(any(String.class));
-        }
-
-        @Test
-        @DisplayName("Should get all products with pagination")
+        @DisplayName("should retrieve all products with pagination")
         void shouldGetAllProductsWithPagination() {
             // Given
-            setupValidAuthentication();
+            mockAuthenticatedUser(testUserId);
             Pageable pageable = PageRequest.of(0, 10);
             Page<Product> productPage = new PageImpl<>(List.of(testProduct));
             when(productRepository.findAll(eq(pageable))).thenReturn(productPage);
 
             // When
-            Page<ProductResponse> responses = productService.getAllProducts(pageable, validToken);
+            Page<ProductResponse> response = productService.getAllProducts(pageable);
 
             // Then
-            assertThat(responses.getContent()).hasSize(1);
-            assertThat(responses.getContent().getFirst().getId()).isEqualTo(productId);
-            verify(userService).getCurrentUser(eq(validToken));
+            assertThat(response).isNotNull();
+            assertThat(response.getContent()).hasSize(1);
+            assertThat(response.getContent().get(0).getId()).isEqualTo(productId);
+
+            verify(securityService).getCurrentUserId();
             verify(productRepository).findAll(eq(pageable));
         }
 
         @Test
-        @DisplayName("Should throw ValidationException when pageable is null")
-        void shouldThrowValidationExceptionWhenPageableIsNull() {
-            assertThatThrownBy(() -> productService.getAllProducts(null, validToken))
-                    .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Pageable");
+        @DisplayName("should return empty page when no products exist")
+        void shouldReturnEmptyPageWhenNoProducts() {
+            // Given
+            mockAuthenticatedUser(testUserId);
+            Pageable pageable = PageRequest.of(0, 10);
+            Page<Product> emptyPage = new PageImpl<>(Collections.emptyList());
+            when(productRepository.findAll(eq(pageable))).thenReturn(emptyPage);
 
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).findAll(any(Pageable.class));
+            // When
+            Page<ProductResponse> response = productService.getAllProducts(pageable);
+
+            // Then
+            assertThat(response).isNotNull();
+            assertThat(response.getContent()).isEmpty();
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findAll(eq(pageable));
         }
     }
 
     @Nested
-    @DisplayName("Patch Operations")
-    class PatchOperations {
+    @DisplayName("searchProducts")
+    class SearchProductsTests {
 
         @Test
-        @DisplayName("Should patch product successfully with admin access")
-        void shouldPatchProductSuccessfully() {
+        @DisplayName("should search products successfully")
+        void shouldSearchProductsSuccessfully() {
             // Given
-            setupAdminAuthentication();
-            Map<String, Object> patchData = Map.of("name", "Patched Product");
-            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
-            when(productRepository.save(any(Product.class))).thenReturn(testProduct);
+            String query = "test";
+            mockAuthenticatedUser(testUserId);
+            Pageable pageable = PageRequest.of(0, 10);
+            Page<Product> productPage = new PageImpl<>(List.of(testProduct));
+            when(productRepository.searchByNameBrandOrCategory(eq(query), eq(pageable)))
+                    .thenReturn(productPage);
 
             // When
-            ProductResponse response = productService.patchProduct(productId, patchData, validToken);
+            Page<ProductResponse> response = productService.searchProducts(query, pageable);
 
             // Then
             assertThat(response).isNotNull();
-            verify(userService).getCurrentUser(eq(validToken));
+            assertThat(response.getContent()).hasSize(1);
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).searchByNameBrandOrCategory(eq(query), eq(pageable));
+        }
+
+        @Test
+        @DisplayName("should throw ValidationException when query is null")
+        void shouldThrowValidationExceptionWhenQueryIsNull() {
+            // Given
+            Pageable pageable = PageRequest.of(0, 10);
+
+            // When/Then
+            assertThatThrownBy(() -> productService.searchProducts(null, pageable))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Search query cannot be null or empty");
+
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).searchByNameBrandOrCategory(any(), any());
+        }
+
+        @Test
+        @DisplayName("should throw ValidationException when query is empty")
+        void shouldThrowValidationExceptionWhenQueryIsEmpty() {
+            // Given
+            Pageable pageable = PageRequest.of(0, 10);
+
+            // When/Then
+            assertThatThrownBy(() -> productService.searchProducts("   ", pageable))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Search query cannot be null or empty");
+
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).searchByNameBrandOrCategory(any(), any());
+        }
+    }
+
+    // ==================== Create Operation Tests ====================
+
+    @Nested
+    @DisplayName("createProduct")
+    class CreateProductTests {
+
+        @Test
+        @DisplayName("should create product with API enrichment successfully")
+        void shouldCreateProductWithApiEnrichment() {
+            // Given
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findByUpc(eq(testProductRequest.getUpc()))).thenReturn(Optional.empty());
+
+            ProductResponse apiResponse = ProductResponse.builder()
+                    .upc(testProductRequest.getUpc())
+                    .name("API Product Name")
+                    .brand("API Brand")
+                    .category("API Category")
+                    .build();
+            when(upcApiService.fetchProductData(eq(testProductRequest.getUpc()))).thenReturn(apiResponse);
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> {
+                Product p = inv.getArgument(0);
+                p.setId(productId);
+                return p;
+            });
+
+            // When
+            ProductResponse response = productService.createProduct(testProductRequest);
+
+            // Then
+            assertThat(response).isNotNull();
+            assertThat(response.getUpc()).isEqualTo(testProductRequest.getUpc());
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findByUpc(eq(testProductRequest.getUpc()));
+            verify(upcApiService).fetchProductData(eq(testProductRequest.getUpc()));
+            verify(productRepository).save(argThat(product ->
+                    product.getDataSource() == ProductDataSource.OPEN_FOOD_FACTS &&
+                            !product.getRequiresApiRetry()
+            ));
+        }
+
+        @Test
+        @DisplayName("should create manual product when API fails")
+        void shouldCreateManualProductWhenApiFails() {
+            // Given
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findByUpc(eq(testProductRequest.getUpc()))).thenReturn(Optional.empty());
+            when(upcApiService.fetchProductData(eq(testProductRequest.getUpc())))
+                    .thenThrow(new RuntimeException("API unavailable"));
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> {
+                Product p = inv.getArgument(0);
+                p.setId(productId);
+                return p;
+            });
+
+            // When
+            ProductResponse response = productService.createProduct(testProductRequest);
+
+            // Then
+            assertThat(response).isNotNull();
+            assertThat(response.getUpc()).isEqualTo(testProductRequest.getUpc());
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).save(argThat(product ->
+                    product.getDataSource() == ProductDataSource.MANUAL &&
+                            product.getRequiresApiRetry() &&
+                            product.getRetryAttempts() == 0
+            ));
+        }
+
+        @Test
+        @DisplayName("should throw ValidationException when request is null")
+        void shouldThrowValidationExceptionWhenRequestIsNull() {
+            // When/Then
+            assertThatThrownBy(() -> productService.createProduct(null))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Product request cannot be null");
+
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("should throw ValidationException when UPC is null")
+        void shouldThrowValidationExceptionWhenUpcIsNull() {
+            // Given
+            mockAuthenticatedUser(testUserId);
+            ProductRequest invalidRequest = ProductRequest.builder()
+                    .name("Test")
+                    .build();
+
+            // When/Then
+            assertThatThrownBy(() -> productService.createProduct(invalidRequest))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("UPC cannot be null or empty");
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository, never()).save(any());
+        }
+
+        @Test
+        @DisplayName("should throw ConflictException when UPC already exists")
+        void shouldThrowConflictExceptionWhenUpcExists() {
+            // Given
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findByUpc(eq(testProductRequest.getUpc())))
+                    .thenReturn(Optional.of(testProduct));
+
+            // When/Then
+            assertThatThrownBy(() -> productService.createProduct(testProductRequest))
+                    .isInstanceOf(ConflictException.class)
+                    .hasMessageContaining("Product with UPC '" + testProductRequest.getUpc() + "' already exists");
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findByUpc(eq(testProductRequest.getUpc()));
+            verify(productRepository, never()).save(any());
+        }
+    }
+
+    // ==================== Update Operation Tests ====================
+
+    @Nested
+    @DisplayName("updateProduct")
+    class UpdateProductTests {
+
+        @Test
+        @DisplayName("should update product successfully as admin")
+        void shouldUpdateProductSuccessfullyAsAdmin() {
+            // Given
+            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            // When
+            ProductResponse response = productService.updateProduct(productId, testProductUpdateRequest);
+
+            // Then
+            assertThat(response).isNotNull();
+            assertThat(response.getName()).isEqualTo(testProductUpdateRequest.getName());
+            assertThat(response.getBrand()).isEqualTo(testProductUpdateRequest.getBrand());
+
+            verify(securityService).getCurrentUserId();
             verify(productRepository).findById(eq(productId));
             verify(productRepository).save(any(Product.class));
         }
 
         @Test
-        @DisplayName("Should throw ValidationException when patch data is null")
-        void shouldThrowValidationExceptionWhenPatchDataIsNull() {
-            assertThatThrownBy(() -> productService.patchProduct(productId, null, validToken))
+        @DisplayName("should throw ValidationException when product ID is null")
+        void shouldThrowValidationExceptionWhenProductIdIsNull() {
+            // When/Then
+            assertThatThrownBy(() -> productService.updateProduct(null, testProductUpdateRequest))
                     .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Patch data");
+                    .hasMessageContaining("Product ID cannot be null");
 
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).save(any(Product.class));
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).findById(any());
         }
 
         @Test
-        @DisplayName("Should throw ValidationException when patch data is empty")
-        void shouldThrowValidationExceptionWhenPatchDataIsEmpty() {
-            Map<String, Object> emptyPatchData = new HashMap<>();
-
-            assertThatThrownBy(() -> productService.patchProduct(productId, emptyPatchData, validToken))
+        @DisplayName("should throw ValidationException when request is null")
+        void shouldThrowValidationExceptionWhenRequestIsNull() {
+            // When/Then
+            assertThatThrownBy(() -> productService.updateProduct(productId, null))
                     .isInstanceOf(ValidationException.class)
-                    .hasMessageContaining("Patch data cannot be empty");
+                    .hasMessageContaining("Update request cannot be null");
 
-            verify(userService, never()).getCurrentUser(any(JwtAuthenticationToken.class));
-            verify(productRepository, never()).save(any(Product.class));
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).findById(any());
         }
 
         @Test
-        @DisplayName("Should throw NotFoundException when product not found for patch")
-        void shouldThrowNotFoundExceptionWhenProductNotFoundForPatch() {
+        @DisplayName("should throw NotFoundException when product doesn't exist")
+        void shouldThrowNotFoundExceptionWhenProductDoesntExist() {
             // Given
-            setupAdminAuthentication();
-            Map<String, Object> patchData = Map.of("name", "Patched Product");
             when(productRepository.findById(eq(productId))).thenReturn(Optional.empty());
 
-            // When & Then
-            assertThatThrownBy(() -> productService.patchProduct(productId, patchData, validToken))
+            // When/Then
+            assertThatThrownBy(() -> productService.updateProduct(productId, testProductUpdateRequest))
                     .isInstanceOf(NotFoundException.class)
-                    .hasMessage("Product not found");
+                    .hasMessageContaining("Product not found");
 
-            verify(userService).getCurrentUser(eq(validToken));
+            verify(securityService).getCurrentUserId();
             verify(productRepository).findById(eq(productId));
-            verify(productRepository, never()).save(any(Product.class));
+            verify(productRepository, never()).save(any());
         }
     }
 
     @Nested
-    @DisplayName("Authorization Tests")
-    class AuthorizationTests {
+    @DisplayName("patchProduct")
+    class PatchProductTests {
 
         @Test
-        @DisplayName("Should allow regular user to create product")
-        void shouldAllowRegularUserToCreateProduct() {
+        @DisplayName("should patch product successfully as admin")
+        void shouldPatchProductSuccessfullyAsAdmin() {
             // Given
-            setupValidAuthentication();
-            when(productRepository.findByUpc(eq(testProductRequest.getUpc()))).thenReturn(Optional.empty());
-            when(productRepository.save(any(Product.class))).thenReturn(testProduct);
-            when(upcApiService.fetchProductData(eq(testProductRequest.getUpc())))
-                    .thenThrow(new RuntimeException("API unavailable"));
+            Map<String, Object> patchData = new HashMap<>();
+            patchData.put("name", "Patched Name");
+            patchData.put("defaultExpirationDays", 60);
 
-            // When
-            ProductResponse response = productService.createProduct(testProductRequest, validToken);
-
-            // Then
-            assertThat(response).isNotNull();
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should allow admin to create product")
-        void shouldAllowAdminToCreateProduct() {
-            // Given
-            setupAdminAuthentication();
-            when(productRepository.findByUpc(eq(testProductRequest.getUpc()))).thenReturn(Optional.empty());
-            when(productRepository.save(any(Product.class))).thenReturn(testProduct);
-            when(upcApiService.fetchProductData(eq(testProductRequest.getUpc())))
-                    .thenThrow(new RuntimeException("API unavailable"));
-
-            // When
-            ProductResponse response = productService.createProduct(testProductRequest, validToken);
-
-            // Then
-            assertThat(response).isNotNull();
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should allow admin to update product")
-        void shouldAllowAdminToUpdateProduct() {
-            // Given
-            setupAdminAuthentication();
             when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
-            when(productRepository.save(any(Product.class))).thenReturn(testProduct);
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> inv.getArgument(0));
 
             // When
-            ProductResponse response = productService.updateProduct(productId, testProductUpdateRequest, validToken);
+            ProductResponse response = productService.patchProduct(productId, patchData);
 
             // Then
             assertThat(response).isNotNull();
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).save(any(Product.class));
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findById(eq(productId));
+            verify(productRepository).save(argThat(product ->
+                    product.getName().equals("Patched Name") &&
+                            product.getDefaultExpirationDays() == 60
+            ));
         }
 
         @Test
-        @DisplayName("Should deny regular user from updating product")
-        void shouldDenyRegularUserFromUpdatingProduct() {
+        @DisplayName("should throw ValidationException when product ID is null")
+        void shouldThrowValidationExceptionWhenProductIdIsNull() {
             // Given
-            setupValidAuthentication();
+            Map<String, Object> patchData = Map.of("name", "Test");
 
-            // When & Then
-            assertThatThrownBy(() -> productService.updateProduct(productId, testProductUpdateRequest, validToken))
-                    .isInstanceOf(InsufficientPermissionException.class)
-                    .hasMessageContaining("Only administrators can update products");
+            // When/Then
+            assertThatThrownBy(() -> productService.patchProduct(null, patchData))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Product ID cannot be null");
 
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository, never()).findById(any(UUID.class));
-            verify(productRepository, never()).save(any(Product.class));
+            verify(securityService, never()).getCurrentUserId();
         }
 
         @Test
-        @DisplayName("Should allow admin to delete product")
-        void shouldAllowAdminToDeleteProduct() {
+        @DisplayName("should throw ValidationException when patch data is null")
+        void shouldThrowValidationExceptionWhenPatchDataIsNull() {
+            // When/Then
+            assertThatThrownBy(() -> productService.patchProduct(productId, null))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Patch data cannot be null or empty");
+
+            verify(securityService, never()).getCurrentUserId();
+        }
+
+        @Test
+        @DisplayName("should throw ValidationException when patch data is empty")
+        void shouldThrowValidationExceptionWhenPatchDataIsEmpty() {
+            // When/Then
+            assertThatThrownBy(() -> productService.patchProduct(productId, Collections.emptyMap()))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Patch data cannot be null or empty");
+
+            verify(securityService, never()).getCurrentUserId();
+        }
+
+        @Test
+        @DisplayName("should throw ValidationException for unsupported field")
+        void shouldThrowValidationExceptionForUnsupportedField() {
             // Given
-            setupAdminAuthentication();
+            Map<String, Object> patchData = Map.of("invalidField", "value");
             when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
 
+            // When/Then
+            assertThatThrownBy(() -> productService.patchProduct(productId, patchData))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Unsupported field for patching: invalidField");
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository, never()).save(any());
+        }
+    }
+
+    // ==================== Delete Operation Tests ====================
+
+    @Nested
+    @DisplayName("deleteProduct")
+    class DeleteProductTests {
+
+        @Test
+        @DisplayName("should delete product successfully as admin")
+        void shouldDeleteProductSuccessfullyAsAdmin() {
+            // Given
+            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
+            doNothing().when(productRepository).delete(any(Product.class));
+
             // When
-            productService.deleteProduct(productId, validToken);
+            productService.deleteProduct(productId);
 
             // Then
-            verify(userService).getCurrentUser(eq(validToken));
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findById(eq(productId));
             verify(productRepository).delete(eq(testProduct));
         }
 
         @Test
-        @DisplayName("Should deny regular user from deleting product")
-        void shouldDenyRegularUserFromDeletingProduct() {
-            // Given
-            setupValidAuthentication();
+        @DisplayName("should throw ValidationException when product ID is null")
+        void shouldThrowValidationExceptionWhenProductIdIsNull() {
+            // When/Then
+            assertThatThrownBy(() -> productService.deleteProduct(null))
+                    .isInstanceOf(ValidationException.class)
+                    .hasMessageContaining("Product ID cannot be null");
 
-            // When & Then
-            assertThatThrownBy(() -> productService.deleteProduct(productId, validToken))
-                    .isInstanceOf(InsufficientPermissionException.class)
-                    .hasMessageContaining("Only administrators can delete products");
-
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository, never()).findById(any(UUID.class));
-            verify(productRepository, never()).delete(any(Product.class));
+            verify(securityService, never()).getCurrentUserId();
+            verify(productRepository, never()).delete(any());
         }
 
         @Test
-        @DisplayName("Should allow admin to patch product")
-        void shouldAllowAdminToPatchProduct() {
+        @DisplayName("should throw NotFoundException when product doesn't exist")
+        void shouldThrowNotFoundExceptionWhenProductDoesntExist() {
             // Given
-            setupAdminAuthentication();
-            Map<String, Object> patchData = Map.of("name", "Patched Product");
-            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
-            when(productRepository.save(any(Product.class))).thenReturn(testProduct);
+            when(productRepository.findById(eq(productId))).thenReturn(Optional.empty());
 
-            // When
-            ProductResponse response = productService.patchProduct(productId, patchData, validToken);
+            // When/Then
+            assertThatThrownBy(() -> productService.deleteProduct(productId))
+                    .isInstanceOf(NotFoundException.class)
+                    .hasMessageContaining("Product not found");
 
-            // Then
-            assertThat(response).isNotNull();
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should deny regular user from patching product")
-        void shouldDenyRegularUserFromPatchingProduct() {
-            // Given
-            setupValidAuthentication();
-            Map<String, Object> patchData = Map.of("name", "Patched Product");
-
-            // When & Then
-            assertThatThrownBy(() -> productService.patchProduct(productId, patchData, validToken))
-                    .isInstanceOf(InsufficientPermissionException.class)
-                    .hasMessageContaining("Only administrators can update products");
-
-            verify(userService).getCurrentUser(eq(validToken));
-            verify(productRepository, never()).findById(any(UUID.class));
-            verify(productRepository, never()).save(any(Product.class));
-        }
-
-        @Test
-        @DisplayName("Should allow regular user to read product")
-        void shouldAllowRegularUserToReadProduct() {
-            // Given
-            setupValidAuthentication();
-            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
-
-            // When
-            ProductResponse response = productService.getProductById(productId, validToken);
-
-            // Then
-            assertThat(response).isNotNull();
-            verify(userService).getCurrentUser(eq(validToken));
+            verify(securityService).getCurrentUserId();
             verify(productRepository).findById(eq(productId));
+            verify(productRepository, never()).delete(any());
+        }
+    }
+
+    // ==================== Retry Operations Tests ====================
+
+    @Nested
+    @DisplayName("retryApiEnrichment")
+    class RetryApiEnrichmentTests {
+
+        @Test
+        @DisplayName("should retry API enrichment successfully as admin")
+        void shouldRetryApiEnrichmentSuccessfully() {
+            // Given
+            Product productToRetry = Product.builder()
+                    .id(UUID.randomUUID())
+                    .upc("999999999999")
+                    .name("Retry Product")
+                    .dataSource(ProductDataSource.MANUAL)
+                    .requiresApiRetry(true)
+                    .retryAttempts(1)
+                    .build();
+
+            when(productRepository.findByRequiresApiRetryTrueAndRetryAttemptsLessThan(5))
+                    .thenReturn(List.of(productToRetry));
+
+            ProductResponse apiResponse = ProductResponse.builder()
+                    .upc(productToRetry.getUpc())
+                    .name("API Enriched Name")
+                    .build();
+            when(upcApiService.fetchProductData(eq(productToRetry.getUpc()))).thenReturn(apiResponse);
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            // When
+            int result = productService.retryApiEnrichment();
+
+            // Then
+            assertThat(result).isEqualTo(1);
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).findByRequiresApiRetryTrueAndRetryAttemptsLessThan(5);
+            verify(upcApiService).fetchProductData(eq(productToRetry.getUpc()));
+            verify(productRepository).save(argThat(product ->
+                    product.getDataSource() == ProductDataSource.OPEN_FOOD_FACTS &&
+                            !product.getRequiresApiRetry()
+            ));
+        }
+
+        @Test
+        @DisplayName("should increment retry attempts when API fails")
+        void shouldIncrementRetryAttemptsWhenApiFails() {
+            // Given
+            Product productToRetry = Product.builder()
+                    .id(UUID.randomUUID())
+                    .upc("999999999999")
+                    .name("Retry Product")
+                    .dataSource(ProductDataSource.MANUAL)
+                    .requiresApiRetry(true)
+                    .retryAttempts(1)
+                    .build();
+
+            when(productRepository.findByRequiresApiRetryTrueAndRetryAttemptsLessThan(5))
+                    .thenReturn(List.of(productToRetry));
+            when(upcApiService.fetchProductData(eq(productToRetry.getUpc())))
+                    .thenThrow(new RuntimeException("API failed"));
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            // When
+            int result = productService.retryApiEnrichment();
+
+            // Then
+            assertThat(result).isEqualTo(0);
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).save(argThat(product ->
+                    product.getRetryAttempts() == 2 &&
+                            product.getRequiresApiRetry()
+            ));
+        }
+
+        @Test
+        @DisplayName("should disable retry after max attempts")
+        void shouldDisableRetryAfterMaxAttempts() {
+            // Given
+            Product productToRetry = Product.builder()
+                    .id(UUID.randomUUID())
+                    .upc("999999999999")
+                    .name("Retry Product")
+                    .dataSource(ProductDataSource.MANUAL)
+                    .requiresApiRetry(true)
+                    .retryAttempts(4) // One below max
+                    .build();
+
+            when(productRepository.findByRequiresApiRetryTrueAndRetryAttemptsLessThan(5))
+                    .thenReturn(List.of(productToRetry));
+            when(upcApiService.fetchProductData(eq(productToRetry.getUpc())))
+                    .thenThrow(new RuntimeException("API failed"));
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> inv.getArgument(0));
+
+            // When
+            int result = productService.retryApiEnrichment();
+
+            // Then
+            assertThat(result).isEqualTo(0);
+
+            verify(securityService).getCurrentUserId();
+            verify(productRepository).save(argThat(product ->
+                    product.getRetryAttempts() == 5 &&
+                            !product.getRequiresApiRetry() // Disabled after max attempts
+            ));
+        }
+    }
+
+    // ==================== Deprecated Methods Tests ====================
+
+    @Nested
+    @DisplayName("Deprecated Methods")
+    class DeprecatedMethodsTests {
+
+        @Test
+        @DisplayName("deprecated createProduct should delegate to new method")
+        void deprecatedCreateProductShouldDelegate() {
+            // Given
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findByUpc(any())).thenReturn(Optional.empty());
+            when(upcApiService.fetchProductData(any())).thenThrow(new RuntimeException("API failed"));
+            when(productRepository.save(any(Product.class))).thenAnswer(inv -> {
+                Product p = inv.getArgument(0);
+                p.setId(productId);
+                return p;
+            });
+
+            // When
+            @SuppressWarnings("deprecation")
+            ProductResponse response = productService.createProduct(testProductRequest, null);
+
+            // Then
+            assertThat(response).isNotNull();
+            verify(securityService).getCurrentUserId();
+        }
+
+        @Test
+        @DisplayName("deprecated getProductById should delegate to new method")
+        void deprecatedGetProductByIdShouldDelegate() {
+            // Given
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findById(eq(productId))).thenReturn(Optional.of(testProduct));
+
+            // When
+            @SuppressWarnings("deprecation")
+            ProductResponse response = productService.getProductById(productId, null);
+
+            // Then
+            assertThat(response).isNotNull();
+            verify(securityService).getCurrentUserId();
+        }
+
+        @Test
+        @DisplayName("deprecated getProductByUpc should delegate to new method")
+        void deprecatedGetProductByUpcShouldDelegate() {
+            // Given
+            String upc = "123456789012";
+            mockAuthenticatedUser(testUserId);
+            when(productRepository.findByUpc(eq(upc))).thenReturn(Optional.of(testProduct));
+
+            // When
+            @SuppressWarnings("deprecation")
+            ProductResponse response = productService.getProductByUpc(upc, null);
+
+            // Then
+            assertThat(response).isNotNull();
+            verify(securityService).getCurrentUserId();
         }
     }
 }
